--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -199,7 +199,7 @@
     "Class": null,
     "Height": 96,
     "HSpace": 0,
-    "Src": "/assets/images/logotype/logotype.png",
+    "Src": "/assets/images/logotype/icon_5@8x.png",
     "VSpace": 0,
     "Width": 96,
     "MediaId": "00000000-0000-0000-0000-000000000000",
@@ -213,7 +213,7 @@
     "Class": null,
     "Height": 96,
     "HSpace": 0,
-    "Src": "/assets/images/logotype/logotype.png",
+    "Src": "/assets/images/logotype/icon_4@8x.png",
     "VSpace": 0,
     "Width": 96,
     "MediaId": "00000000-0000-0000-0000-000000000000",
@@ -245,8 +245,8 @@
             </li>
             <li class="nav-2023-mobile-item nav-2023-mobile-hallmark-container">
                 <a class="nav-2023-hallmark" href=/index.php>
-                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotype/logotype.png alt="Chevron" />
-                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotype/logotype.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotype/icon_3@8x.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotype/icon_1@8x.png alt="Chevron" />
                 </a>
             </li>
             <li class="nav-2023-mobile-item">
@@ -283,8 +283,8 @@
             </ul>
             <div class="nav-2023-hallmark-container d-none d-lg-block">
                 <a class="nav-2023-hallmark" href=/index.php>
-                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotype/logotype.png alt="Chevron" />
-                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotype/logotype.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotype/icon_4@8x.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotype/icon_2@8x.png alt="Chevron" />
                 </a>
             </div>
             <ul class="nav-2023-list nav-2023-list-level-2 nav-2023-list-right">
