footer/correccion colores

--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -8,14 +8,14 @@
         "Type": 0,
         "Anchor": null,
         "Class": "",
-        "Text": "Acerca de",
+        "Text": "ACERCA DE",
         "Query": null,
         "Title": "",
         "Url": "",
         "Target": "",
         "Style": null
       },
-      "Title": "Acerca de",
+      "Title": "ACERCA DE",
       "PromoCards": [],
       "ChildLinks": [
         {
@@ -60,14 +60,14 @@
         "Type": 0,
         "Anchor": null,
         "Class": "",
-        "Text": "Servicios",
+        "Text": "SOPORTE",
         "Query": null,
         "Title": "",
         "Url": "",
         "Target": "",
         "Style": null
       },
-      "Title": "Servicios",
+      "Title": "SOPORTE",
       "PromoCards": [],
       "ChildLinks": [
         {
@@ -79,7 +79,7 @@
             "Text": "Pedidos",
             "Query": null,
             "Title": "",
-            "Url": "/servicios/pedido.php",
+            "Url": "/soporte/pedido.php",
             "Target": "",
             "Style": null
           },
@@ -96,7 +96,7 @@
             "Text": "Facturación",
             "Query": null,
             "Title": "",
-            "Url": "/servicios/facturacion.php",
+            "Url": "/soporte/facturacion.php",
             "Target": "",
             "Style": null
           },
@@ -113,7 +113,7 @@
             "Text": "Contacto",
             "Query": null,
             "Title": "",
-            "Url": "/servicios/contacto.php",
+            "Url": "/soporte/contacto.php",
             "Target": "",
             "Style": null
           },
@@ -129,14 +129,14 @@
         "Type": 0,
         "Anchor": null,
         "Class": "",
-        "Text": "Soporte y asesoría",
+        "Text": "SERVICIOS Y ASESORÍA",
         "Query": null,
         "Title": "",
         "Url": "",
         "Target": "",
         "Style": null
       },
-      "Title": "Soporte y asesoría",
+      "Title": "SERVICIOS Y ASESORÍA",
       "PromoCards": [],
       "ChildLinks": [
         {
@@ -148,7 +148,7 @@
             "Text": "Asesoría técnica",
             "Query": null,
             "Title": "",
-            "Url": "/soporte_y_asesoria/asesoria_tecnica.php",
+            "Url": "/servicio_y_asesoria/asesoria_tecnica.php",
             "Target": "",
             "Style": null
           },
@@ -165,7 +165,7 @@
             "Text": "Recomendaciones",
             "Query": null,
             "Title": "",
-            "Url": "/soporte_y_asesoria/recomendaciones.php",
+            "Url": "/servicio_y_asesoria/recomendaciones.php",
             "Target": "",
             "Style": null
           },
@@ -182,7 +182,7 @@
             "Text": "Medidas de seguridad",
             "Query": null,
             "Title": "",
-            "Url": "/soporte_y_asesoria/medidas_de_seguridad.php",
+            "Url": "/servicio_y_asesoria/medidas_de_seguridad.php",
             "Target": "",
             "Style": null
           },
@@ -263,19 +263,19 @@
 
                     <li class="nav-2023-item">
                             <a class="nav-2023-toggler nav-2023-link cta-link type-navigation text-reduced">
-                                <span class="cta-underline">Acerca de</span>
+                                <span class="cta-underline">ACERCA DE</span>
                             </a>
 
                     </li>
                     <li class="nav-2023-item">
                             <a class="nav-2023-toggler nav-2023-link cta-link type-navigation text-reduced">
-                                <span class="cta-underline">Servicios</span>
+                                <span class="cta-underline">SOPORTE</span>
                             </a>
 
                     </li>
                     <li class="nav-2023-item">
                             <a class="nav-2023-toggler nav-2023-link cta-link type-navigation text-reduced">
-                                <span class="cta-underline">Soporte y Asesoria</span>
+                                <span class="cta-underline">SERVICIOS Y ASESORÍA</span>
                             </a>
 
                     </li>
